sumo/tests/sumo/spec/departure/errors/lane_given10/rawdump.sumo.meso
<?xml version="1.0"?>

<!-- generated on 11/22/10 16:23:31 by SUMO sumo Version dev-SVN-r9393
<?xml version="1.0" encoding="iso-8859-1"?>

<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.sf.net/xsd/sumoConfiguration.xsd">

    <input>
        <net-file value="net.net.xml"/>
        <additional-files value="input_routes.rou.xml,input_additional.add.xml"/>
    </input>

    <output>
        <netstate-dump value="rawdump.xml"/>
    </output>

    <time>
        <begin value="0"/>
        <end value="0"/>
    </time>

    <report>
        <no-duration-log value="true"/>
        <no-step-log value="true"/>
    </report>

    <mesoscopic>
        <mesosim value="true"/>
    </mesoscopic>

</configuration>
-->

<sumo-netstate>
    <timestep time="0.00">
        <edge id="beg">
            <vehicle id="1" pos="0.00" speed="27.80"/>
        </edge>
    </timestep>
</sumo-netstate>
